--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Family Attendance System</title>
     <meta name="description" content="Track family members' daily attendance with location verification">
+    <link rel="manifest" href="/manifest.json">
     
     <!-- React and Babel -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
@@ -1186,6 +1187,20 @@ const FamilyAttendance = () => {
         // Render the component:
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<FamilyAttendance />);
+    </script>
+
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js')
+            .then(registration => {
+              console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            })
+            .catch(error => {
+              console.log('ServiceWorker registration failed: ', error);
+            });
+        });
+      }
     </script>
 </body>
 </html>
